# tomris-lab2

./: CMakeLists.txt  LinkedList.h  Node.h  main.cpp  main.h
